--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ align-items: center;
 .Frame{
     display: none;
 }
+.forres{
+    color: #FFF;
+
+            font-family: Mulish;
+            text-align: center;
+            
+            font-size: 64px;
+            font-style: normal;
+            font-weight: 800;
+            line-height: normal;
+}
 @media only screen and (max-width: 600px) {
  
     .first-img{
@@ -44,6 +55,7 @@ align-items: center;
                 font-weight: 800;
                 line-height: normal;
     }
+    
   }
   .imgh1{
     color: #131318;
@@ -55,9 +67,11 @@ align-items: center;
             line-height: normal;
 }
 .bgimg{
-    background-image: url("./Images/Group\ 13\ \(1\)\ \(1\).png");
-    background: no-repeat;
-    width: 1000px;
+    background-image: url("https://i.ibb.co/Y0vFtbZ/Group-13-1-1.png");
+    background-repeat: no-repeat;
+    width: 1200px;
     margin: auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    height: 500px;
+    padding-top: 70px;
 }
