--- a/style.css
+++ b/style.css
@@ -27,8 +27,527 @@ align-items: center;
             font-weight: 800;
             line-height: normal;
 }
-@media only screen and (max-width: 600px) {
+.perent-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 100px;
+    
+}
+.mountent-img{
+    width: 440px;
+    height: 550px;
+
+}
+.our-popular{
+width:  600px;
+}
+.our-h{
+color: #131318;
+
+    
+    font-family: Mulish;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.our-p{
+    color: rgba(19, 19, 24, 0.70);
+    
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+}
+ ul li{
+    color: rgba(19, 19, 24, 0.70);
+    
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+ }
+
+.ooo-p{
+    color: #5A5A5D;
+    
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+}
+.title-container-2{
+    width: 1300px;
+    padding-top: 50px;
+    margin: auto;
+
+}
+.title-h{
+    font-size: 35px;
+    color: black;
+    text-align: center;
+    font: bold;
+}
+.title-p{
+    text-align: center;
+    color:gray;
+    font-size: 20px;
+    width: 600px;
+    margin: auto;
+}
+.img-one-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 35px;
+}
+.img-one{
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png");
+    object-fit: cover;
+    width: 573px;
+        height: 300px;
+        flex-shrink: 0;
+}
+.img-h-one{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+.img-two{
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/sWVvdgm/Rectangle-8.png");
+    object-fit: cover;
+    width: 573px;
+        height: 300px;
+        flex-shrink: 0;
+}
+.img-h-two{
+ color: white;
  
+    font-size: 30px;
+    text-align: center;
+}
+.img-three-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 35px;
+}
+.img-three{
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/jHsxZQq/Rectangle-6.png");
+    object-fit: cover;
+    width: 374px;
+        height: 286px;
+        flex-shrink: 0;
+}
+.img-h-three{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+.img-four{
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/SRwZcb6/Rectangle-7.png");
+  
+width: 474px;
+    height: 286px;
+    flex-shrink: 0;
+}
+.img-h-four{
+ color: white;
+ 
+    font-size: 30px;
+    text-align: center;
+}
+.img-five{
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/2SbXXW7/Rectangle-9.png");
+   
+width: 274px;
+    height: 286px;
+    flex-shrink: 0;
+}
+.img-h-five{
+ color: white;
+ 
+    font-size: 30px;
+    text-align: center;
+}
+.img-six-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 35px;
+}
+
+.img-six {
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/7rdNMh7/Rectangle-11.png");
+    object-fit: cover;
+width: 473px;
+    height: 300px;
+    flex-shrink: 0;
+   
+}
+
+.img-h-six {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+.img-seven {
+    background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/WV287PT/Rectangle-10.png");
+    object-fit: cover;
+width: 673px;
+    height: 300px;
+    flex-shrink: 0;
+  
+}
+
+.img-h-seven {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+
+
+/* ?&&&&&&&&&&&&&&& */
+
+.first-img {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+}
+
+.rafi-bhaiya {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h-all {
+    display: flex;
+    gap: 30px;
+}
+
+.Frame {
+    display: none;
+}
+
+.forres{
+    color: #FFF;
+
+    font-family: Mulish;
+    text-align: center;
+
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+
+
+.imgh1 {
+    color: #131318;
+
+    font-family: Mulish;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.bgimg {
+    background-image: url("https://i.ibb.co/Y0vFtbZ/Group-13-1-1.png");
+    background-repeat: no-repeat;
+    width: 1200px;
+
+    margin: auto;
+    /* border: 2px solid red; */
+    height: 500px;
+    padding-top: 100px;
+}
+
+/* ?&&&&&&&&&&&&&&& */
+.first-img {
+    display: flex;
+
+    align-items: center;
+}
+
+.rafi-bhaiya {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.h-all {
+    display: none;
+
+}
+
+.Frame {
+    display: block;
+}
+
+.imgh1 {
+    color: #131318;
+
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+
+
+.forres {
+    color: #FFF;
+
+    font-family: Mulish;
+
+
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+@media only screen and (max-width: 600px) {
+    .perent-container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        justify-content: space-around;
+
+    }
+
+    .mountent-img {
+        width: 100%;
+
+    }
+
+    .our-popular {
+        width: 100%;
+    }
+
+    .our-h {
+        color: #131318;
+    text-align: center;
+
+        font-family: Mulish;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 800;
+        line-height: normal;
+    }
+
+    .our-p {
+        color: rgba(19, 19, 24, 0.70);
+
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+    }
+
+    ul li {
+        color: rgba(19, 19, 24, 0.70);
+
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+    }
+    .btn-container{
+        text-align: center;
+    }
+
+    .ooo-p {
+        color: #5A5A5D;
+
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+    }
+            .title-container-2 {
+                width: 100%;
+                padding-top: 50px;
+                margin: auto;
+    
+            }
+    
+            .title-h {
+                font-size: 20px;
+                color: black;
+                text-align: center;
+                font: bold;
+            }
+    
+            .title-p {
+                text-align: center;
+                color: gray;
+                font-size: 15px;
+                width: 100%;
+                margin: auto;
+            }
+            .img-one-container{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 20px;
+margin-top: 35px;
+}
+.img-one{
+background-repeat: no-repeat;
+background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png");
+object-fit: cover;
+width: 100%;
+    height: 300px;
+    flex-shrink: 0;
+}
+.img-h-one{
+font-size: 30px;
+color: white;
+text-align: center;
+}
+.img-two{
+background-repeat: no-repeat;/* 
+background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png"); */
+object-fit: cover;
+width: 100%;
+
+    height: 300px;
+    flex-shrink: 0;
+}
+.img-h-two{
+color: white;
+
+font-size: 30px;
+text-align: center;
+}
+.img-three-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 20px;
+margin-top: 35px;
+}
+
+.img-three {
+background-repeat: no-repeat;/* 
+background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png"); */
+object-fit: cover;
+width: 100%;
+height: 286px;
+flex-shrink: 0;
+}
+
+.img-h-three {
+font-size: 30px;
+color: white;
+text-align: center;
+}
+
+.img-four {
+background-repeat: no-repeat;/* 
+background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png"); */
+
+width: 100%;
+height: 286px;
+flex-shrink: 0;
+}
+
+.img-h-four {
+color: white;
+
+font-size: 30px;
+text-align: center;
+}
+
+.img-five {
+background-repeat: no-repeat;
+object-fit: contain;
+
+/* 
+background-image: url("https://i.ibb.co/Fmq3mGq/Rectangle-5.png"); */
+
+width: 100%;
+height: 286px;
+flex-shrink: 0;
+}
+
+.img-h-five {
+color: white;
+
+font-size: 30px;
+text-align: center;
+}
+.img-six-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 20px;
+margin-top: 35px;
+}
+
+.img-six {
+background-repeat: no-repeat;
+/* background-image: url("https://i.ibb.co/7rdNMh7/Rectangle-11.png"); */
+object-fit: cover;
+width: 100%;
+height: 300px;
+flex-shrink: 0;
+background-repeat: no-repeat;
+}
+
+.img-h-six {
+font-size: 30px;
+color: white;
+text-align: center;
+}
+
+.img-seven {
+background-repeat: no-repeat;
+/* background-image: url("https://i.ibb.co/WV287PT/Rectangle-10.png"); */
+object-fit: cover;
+width: 100%;
+height: 300px;
+flex-shrink: 0;
+background-repeat: no-repeat;
+}
+
+.img-h-seven {
+font-size: 30px;
+color: white;
+text-align: center;
+}
     .first-img{
         display: flex;
         
@@ -55,6 +574,15 @@ align-items: center;
                 font-weight: 800;
                 line-height: normal;
     }
+    .bgimg {
+        background-image: url("https://i.ibb.co/Y0vFtbZ/Group-13-1-1.png");
+        background-repeat: no-repeat;
+        width: 100%;
+        margin: auto;
+        /* border: 2px solid red; */
+    
+        padding-top: 70px;
+    }
     
   }
   .imgh1{
@@ -66,12 +594,4 @@ align-items: center;
             font-weight: 800;
             line-height: normal;
 }
-.bgimg{
-    background-image: url("https://i.ibb.co/Y0vFtbZ/Group-13-1-1.png");
-    background-repeat: no-repeat;
-    width: 1200px;
-    margin: auto;
-    /* border: 2px solid red; */
-    height: 500px;
-    padding-top: 70px;
-}
+
