--- a/style.css
+++ b/style.css
@@ -594,4 +594,32 @@ text-align: center;
             font-weight: 800;
             line-height: normal;
 }
+footer{
+    background-color: #1313180D;
+    height: 71vh;
+}
+.footer{
+    justify-content: center;
+    text-align: center;
+    width: 89%;
+    margin: 0 auto;
+    padding-top: 5em;
+}
+.footer h3 span{
+    color: #FF5400;
+}
+footer .lasting{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    justify-content: space-around;
+    margin-top: 10px;
+    
+}
+.right{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 40px;
+}
 
