--- a/style.css
+++ b/style.css
@@ -328,6 +328,41 @@ width: 673px;
     font-weight: 800;
     line-height: normal;
 }
+.svg-perent-container{
+    display: flex;
+
+    margin-top: 60px;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.svg-container{
+border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    width: 573px;
+        height: 284px;
+        flex-shrink: 0;
+}
+.svg-p{
+    width: 486px;
+    color: #5A5A5D;
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+}
+.svg-h{
+    color: #131318;
+        text-align: center;
+        font-family: Mulish;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 800;
+        line-height: normal;
+}
 @media only screen and (max-width: 600px) {
     .perent-container {
         display: flex;
@@ -565,6 +600,45 @@ text-align: center;
     .Frame{
     display: block;
     }
+    .svg-perent-container {
+        display: flex;
+        flex-direction: column;
+        margin-top: 60px;
+        align-items: center;
+        justify-content: center;
+        padding: 30px;
+        gap: 20px;
+    }
+    
+    .svg-container {
+        width: 100%;
+        padding: 20px;
+        height: 284px;
+        border-radius: 15px;
+        border: 1px solid rgba(251, 181, 99, 0.20);
+        background: rgba(251, 181, 99, 0.05);
+    }
+    
+    .svg-p {
+        width: 100%;
+        color: #5A5A5D;
+        font-family: Mulish;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        /* 162.5% */
+    }
+    
+    .svg-h {
+        color: #131318;
+        text-align: center;
+        font-family: Mulish;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 800;
+        line-height: normal;
+    }
     .imgh1{
         color: #131318;
     
@@ -583,6 +657,82 @@ text-align: center;
     
         padding-top: 70px;
     }
+    .perent-discount {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+        flex-direction: column;
+    
+        justify-content: center;
+    }
+    
+    .newslatter {
+        width: 100%;
+        height: 422px;
+      
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        border-radius: 16px;
+        border: 1px solid #FF5400;
+    }
+    
+    input {
+        border-radius: 8px;
+        background: rgba(19, 19, 24, 0.05);
+        width: 100%;
+        height: 52px;
+        flex-shrink: 0;
+    }
+    
+    .news-btn {
+        width: 100%;
+        height: 52px;
+        flex-shrink: 0;
+        border-radius: 8px;
+        background: #FF5400;
+    }
+    
+    .discount-div {
+        background-image: url("https://i.ibb.co/j6JzjG6/Rectangle-8-1.png");
+        border-radius: 16px;
+        width: 100%;
+        height: 422px;
+        flex-shrink: 0;
+    }
+    footer{
+        background-color: #1313180D;
+        height: 71vh;
+        width: 100%;
+    }
+    .footer{
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        margin:  auto;
+        padding-top: 5em;
+    }
+    .footer h3 span{
+        color: #FF5400;
+    }
+    footer .lasting{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        text-align: center;
+        justify-content: space-around;
+        margin-top: 10px;
+        
+    }
+    .right{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    
     
   }
   .imgh1{
@@ -621,5 +771,83 @@ footer .lasting{
     align-items: center;
     text-align: center;
     margin-bottom: 40px;
+}
+.perent-discount {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-top: 40px;
+
+    justify-content: center;
+}
+.newslatter{
+    width: 474px;
+        height: 422px;
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px   ;
+        border-radius: 16px;
+            border: 1px solid #FF5400;
+}
+input{
+    border-radius: 8px;
+        background: rgba(19, 19, 24, 0.05);
+        width: 393px;
+            height: 52px;
+            flex-shrink: 0;
+}
+.news-btn{
+    width: 393px;
+        height: 52px;
+        flex-shrink: 0;
+        border-radius: 8px;
+            background: #FF5400;
+}
+
+.discount-div {
+    background-image: url("https://i.ibb.co/j6JzjG6/Rectangle-8-1.png");
+    border-radius: 16px;
+    width: 672px;
+    height: 422px;
+    flex-shrink: 0;
+}
+.footer-perent{
+    width: 1440px;
+        height: 402px;
+        margin-top: 100px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        /* flex-shrink: 0; */
+        background: rgba(19, 19, 24, 0.05);
+}
+.footer-p{
+    width: 769px;
+    color: #5A5A5D;
+        text-align: center;
+        font-family: Mulish;
+        font-size: 16px;
+        font-style: normal;
+        
+        
+        
+        /* 162.5% */
+}
+.footer-h{
+    color: #131318;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+}
+.icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
