--- a/style.css
+++ b/style.css
@@ -678,6 +678,7 @@ text-align: center;
         gap: 20px;
         border-radius: 16px;
         border: 1px solid #FF5400;
+        padding: 10px;
     }
     
     input {
@@ -686,6 +687,7 @@ text-align: center;
         width: 100%;
         height: 52px;
         flex-shrink: 0;
+        padding: 10px;
     }
     
     .news-btn {
@@ -701,6 +703,7 @@ text-align: center;
         border-radius: 16px;
         width: 100%;
         height: 422px;
+        padding: 10px;
         flex-shrink: 0;
     }
     footer{
